trying to get it looking the way I want

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -19,12 +19,12 @@ form {
 	padding: 3px;
 	position: fixed;
 	bottom: 0;
-	// width: 50%;
+	width: 10%;
 
 	input { border: 0;
 		 padding: 10px;
-		  // width: 90%;
-			margin-right: 0.5%; }
+		 width: 90%;
+		 margin-right: 0.5%; }
 
 	button { width: 9%;
 		background: rgb(130, 224, 255);
@@ -36,5 +36,6 @@ form {
 
 	li { padding: 5px 10px;	}
 	li:nth-child(odd) {
-		background: #eee; }
+	background: #eee;
+	}
 }
