--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Socket IO Chat with Node!!</title>
+	<title>Mark Landeryou Chat Application Homework</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -14,21 +14,24 @@
     <h1 class="display-4 text-center">Hello</h1>
     <p class="lead text-center">Welcome to my chat application using socket.io, node and express.</p>
   </div>
-</div></header>
+</div>
+</header>
 
-
-<!-- <div class="container">
+<section>
+ <h2 class="invisible">Chat Application</h2>
+<div class="container">
 	<div class="row">
-		<div class="col-sm-12"> -->
+		<div class="col-sm-12">
 	<input type="text" class="nickname" placeholder="What is your nickname?">
 	<ul id="messages"></ul>
 	<form>
 		<input class="message" type="text" id="m" autocomplete="off">
 		<button class="btn btn-primary">send</button>
 	</form>
-	<!-- </div>
+	</div>
 </div>
-</div> -->
+</div>
+</section>
 
 
 	<script src="/socket.io/socket.io.js"></script>
