--- a/views/index.html
+++ b/views/index.html
@@ -19,18 +19,18 @@
 
 <section>
  <h2 class="invisible">Chat Application</h2>
-<div class="container">
+<!-- <div class="container">
 	<div class="row">
-		<div class="col-sm-12">
+		<div class="col-sm-12"> -->
 	<input type="text" class="nickname" placeholder="What is your nickname?">
 	<ul id="messages"></ul>
 	<form>
 		<input class="message" type="text" id="m" autocomplete="off">
 		<button class="btn btn-primary">send</button>
 	</form>
-	</div>
+	<!-- </div>
 </div>
-</div>
+</div> -->
 </section>
 
 
