added a comment in my code

--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
  <h2 class="invisible">Chat Application</h2>
 <!-- <div class="container">
 	<div class="row">
-		<div class="col-sm-12"> -->
+		<div class="col-sm-12"> --> <!-- when this is on then it breaks the message section on the bottom -->
 	<input type="text" class="nickname" placeholder="What is your nickname?">
 	<ul id="messages"></ul>
 	<form>
